--- a/TestCase/TestCase.csproj
+++ b/TestCase/TestCase.csproj
@@ -68,6 +68,10 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\CodeGenCore\CodeGenCore.csproj">
+      <Project>{0577ff75-09c0-4674-afdf-efd96876a29f}</Project>
+      <Name>CodeGenCore</Name>
+    </ProjectReference>
     <ProjectReference Include="..\LexerCore\LexerCore.csproj">
       <Project>{48a30c7a-21a5-459b-8cb9-3ebbb921aaf8}</Project>
       <Name>LexerCore</Name>
