--- a/TestCase/TestCase.csproj
+++ b/TestCase/TestCase.csproj
@@ -56,6 +56,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CodeGenTest\CodeGenTest.cs" />
     <Compile Include="LexerTest\LexerTest.cs" />
     <Compile Include="ParserTest\ParserTest.cs" />
     <Compile Include="ParserTest\ParserUnitTest.cs" />
