--- a/Utility/Utility.csproj
+++ b/Utility/Utility.csproj
@@ -49,7 +49,7 @@
     <Compile Include="GenerateWaitingForm.Designer.cs">
       <DependentUpon>GenerateWaitingForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="ParserGenHelper.cs" />
+    <Compile Include="ParserGenerator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ParserErrorRoutine.cs" />
     <Compile Include="EnhancedControls.cs">
