--- a/ParserCore/ParserCore.csproj
+++ b/ParserCore/ParserCore.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Parser\Parser.cs" />
     <Compile Include="Parser\ParseTable.cs" />
     <Compile Include="Parser\PrintableStack.cs" />
+    <Compile Include="Parser\TreeNode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SLR\LR0Collection.cs" />
     <Compile Include="SLR\LR0Item.cs" />
