--- a/IntermediateCodeGenCore/IntermediateCodeGenCore.csproj
+++ b/IntermediateCodeGenCore/IntermediateCodeGenCore.csproj
@@ -45,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IntermediateCodeGen.cs" />
+    <Compile Include="IntermediateCodeGenException.cs" />
     <Compile Include="Label.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SDTTreeNodeEntry.cs" />
