--- a/GUICodeGen/GUICodeGen.csproj
+++ b/GUICodeGen/GUICodeGen.csproj
@@ -50,9 +50,7 @@
   <PropertyGroup>
     <ApplicationIcon>codegen.ico</ApplicationIcon>
   </PropertyGroup>
-  <PropertyGroup>
-    <ApplicationManifest>app.manifest</ApplicationManifest>
-  </PropertyGroup>
+  <PropertyGroup />
   <ItemGroup>
     <Reference Include="ScintillaNET">
       <HintPath>..\packages\jacobslusser.ScintillaNET.3.5.6\lib\net40\ScintillaNET.dll</HintPath>
